syntax = "proto3";

package auth;

option go_package = "./service/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Activate(ActivateRequest) returns (ActivateResponse) {}
  rpc ResendActivationToken(ResendActivationTokenRequest) returns (ResendActivationTokenResponse) {}
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse) {}
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

// TODO: consolidate api responses

// Register

message RegisterRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
  string refresh_token = 4;
}

// Activate

message ActivateRequest { string token = 1; }

message ActivateResponse {
    int64 status = 1;
    string error = 2;
}

// Resend Activation Token

message ResendActivationTokenRequest { string email = 1; }

message ResendActivationTokenResponse {
    int64 status = 1;
    string error = 2;
}

// Forgot Password

message ForgotPasswordRequest { string email =1; }

message ForgotPasswordResponse {
    int64 status = 1;
    string error = 2;
}

// Reset Password

message ResetPasswordRequest { 
    string token = 1; 
    string password = 2;
    string confirm_password = 3;
}

message ResetPasswordResponse {
    int64 status = 1;
    string error = 2;
}

// Validate

message ValidateRequest { 
    string token = 1;
    string token_type = 2;
}

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  string userId = 3;
}

// Refresh

message RefreshTokenRequest { string refresh_token = 1; }

message RefreshTokenResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}